CC_Lab_discussion/version_1/y.output
State 27 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce


Grammar

    0 $accept: prm $end

    1 prm: HEAD PROC

    2 HEAD: HEADER

    3 PROC: MAIN_TYPE MAIN LB RB LCB BODY RCB

    4 MAIN_TYPE: INT

    5 BODY: STATEMENTS

    6 STATEMENTS: STATEMENT STATEMENTS
    7           | STATEMENT

    8 STATEMENT: DECLARATION_STATEMENT
    9          | PROGRAM_STATEMENT

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE VAR_LIST SC

   11 EXT_DATA_TYPE: TYPE_SIGN TYPE_EXTN TYPE

   12 TYPE: INT
   13     | CHAR

   14 TYPE_SIGN: UNSIGNED
   15          | %empty

   16 TYPE_EXTN: SHORT
   17          | LONG
   18          | %empty

   19 VAR_LIST: EXT_VAR COMA VAR_LIST
   20         | EXT_VAR

   21 EXT_VAR: STAR_SEQ VAR_LABEL DIM_SEQ

   22 DIM_SEQ: DIM DIM_SEQ
   23        | %empty

   24 STAR_SEQ: STAR STAR_SEQ
   25         | %empty

   26 DIM: LSB NUM RSB

   27 PROGRAM_STATEMENT: A_EXPN EQ A_EXPN SC

   28 A_EXPN: A_EXPN PLUS A_EXPN
   29       | A_EXPN STAR A_EXPN
   30       | LB A_EXPN RB
   31       | A_EXPN UPLUS
   32       | VAR_LABEL
   33       | NUM
   34       | STAR A_EXPN
   35       | A_EXPN LSB A_EXPN RSB
   36       | AMB A_EXPN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HEADER (258) 2
    MAIN (259) 3
    LB (260) 3 30
    RB (261) 3 30
    LCB (262) 3
    RCB (263) 3
    SC (264) 10 27
    COMA (265) 19
    EQ (266) 27
    PLUS (267) 28
    STAR (268) 24 29 34
    LSB (269) 26 35
    RSB (270) 26 35
    UPLUS (271) 31
    VAR_LABEL <test_name> (272) 21 32
    INT <type_info> (273) 4 12
    CHAR <type_info> (274) 13
    UNSIGNED <type_info> (275) 14
    SHORT <type_info> (276) 16
    LONG <type_info> (277) 17
    AMB (278) 36
    NUM (279) 26 33


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    prm (26)
        on left: 1
        on right: 0
    HEAD (27)
        on left: 2
        on right: 1
    PROC (28)
        on left: 3
        on right: 1
    MAIN_TYPE (29)
        on left: 4
        on right: 3
    BODY (30)
        on left: 5
        on right: 3
    STATEMENTS (31)
        on left: 6 7
        on right: 5 6
    STATEMENT (32)
        on left: 8 9
        on right: 6 7
    DECLARATION_STATEMENT (33)
        on left: 10
        on right: 8
    EXT_DATA_TYPE <ext_type> (34)
        on left: 11
        on right: 10
    TYPE <type_info> (35)
        on left: 12 13
        on right: 11
    TYPE_SIGN <type_info> (36)
        on left: 14 15
        on right: 11
    TYPE_EXTN <type_info> (37)
        on left: 16 17 18
        on right: 11
    VAR_LIST (38)
        on left: 19 20
        on right: 10 19
    EXT_VAR <ext_var> (39)
        on left: 21
        on right: 19 20
    DIM_SEQ <type_info> (40)
        on left: 22 23
        on right: 21 22
    STAR_SEQ <type_info> (41)
        on left: 24 25
        on right: 21 24
    DIM (42)
        on left: 26
        on right: 22
    PROGRAM_STATEMENT (43)
        on left: 27
        on right: 9
    A_EXPN <expn_type> (44)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 27 28 29 30 31 34 35 36


State 0

    0 $accept: . prm $end

    HEADER  shift, and go to state 1

    prm   go to state 2
    HEAD  go to state 3


State 1

    2 HEAD: HEADER .

    $default  reduce using rule 2 (HEAD)


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 4


State 3

    1 prm: HEAD . PROC

    INT  shift, and go to state 5

    PROC       go to state 6
    MAIN_TYPE  go to state 7


State 4

    0 $accept: prm $end .

    $default  accept


State 5

    4 MAIN_TYPE: INT .

    $default  reduce using rule 4 (MAIN_TYPE)


State 6

    1 prm: HEAD PROC .

    $default  reduce using rule 1 (prm)


State 7

    3 PROC: MAIN_TYPE . MAIN LB RB LCB BODY RCB

    MAIN  shift, and go to state 8


State 8

    3 PROC: MAIN_TYPE MAIN . LB RB LCB BODY RCB

    LB  shift, and go to state 9


State 9

    3 PROC: MAIN_TYPE MAIN LB . RB LCB BODY RCB

    RB  shift, and go to state 10


State 10

    3 PROC: MAIN_TYPE MAIN LB RB . LCB BODY RCB

    LCB  shift, and go to state 11


State 11

    3 PROC: MAIN_TYPE MAIN LB RB LCB . BODY RCB

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    $default  reduce using rule 15 (TYPE_SIGN)

    BODY                   go to state 18
    STATEMENTS             go to state 19
    STATEMENT              go to state 20
    DECLARATION_STATEMENT  go to state 21
    EXT_DATA_TYPE          go to state 22
    TYPE_SIGN              go to state 23
    PROGRAM_STATEMENT      go to state 24
    A_EXPN                 go to state 25


State 12

   30 A_EXPN: LB . A_EXPN RB

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    A_EXPN  go to state 26


State 13

   34 A_EXPN: STAR . A_EXPN

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    A_EXPN  go to state 27


State 14

   32 A_EXPN: VAR_LABEL .

    $default  reduce using rule 32 (A_EXPN)


State 15

   14 TYPE_SIGN: UNSIGNED .

    $default  reduce using rule 14 (TYPE_SIGN)


State 16

   36 A_EXPN: AMB . A_EXPN

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    A_EXPN  go to state 28


State 17

   33 A_EXPN: NUM .

    $default  reduce using rule 33 (A_EXPN)


State 18

    3 PROC: MAIN_TYPE MAIN LB RB LCB BODY . RCB

    RCB  shift, and go to state 29


State 19

    5 BODY: STATEMENTS .

    $default  reduce using rule 5 (BODY)


State 20

    6 STATEMENTS: STATEMENT . STATEMENTS
    7           | STATEMENT .

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    RCB       reduce using rule 7 (STATEMENTS)
    $default  reduce using rule 15 (TYPE_SIGN)

    STATEMENTS             go to state 30
    STATEMENT              go to state 20
    DECLARATION_STATEMENT  go to state 21
    EXT_DATA_TYPE          go to state 22
    TYPE_SIGN              go to state 23
    PROGRAM_STATEMENT      go to state 24
    A_EXPN                 go to state 25


State 21

    8 STATEMENT: DECLARATION_STATEMENT .

    $default  reduce using rule 8 (STATEMENT)


State 22

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE . VAR_LIST SC

    STAR  shift, and go to state 31

    $default  reduce using rule 25 (STAR_SEQ)

    VAR_LIST  go to state 32
    EXT_VAR   go to state 33
    STAR_SEQ  go to state 34


State 23

   11 EXT_DATA_TYPE: TYPE_SIGN . TYPE_EXTN TYPE

    SHORT  shift, and go to state 35
    LONG   shift, and go to state 36

    $default  reduce using rule 18 (TYPE_EXTN)

    TYPE_EXTN  go to state 37


State 24

    9 STATEMENT: PROGRAM_STATEMENT .

    $default  reduce using rule 9 (STATEMENT)


State 25

   27 PROGRAM_STATEMENT: A_EXPN . EQ A_EXPN SC
   28 A_EXPN: A_EXPN . PLUS A_EXPN
   29       | A_EXPN . STAR A_EXPN
   31       | A_EXPN . UPLUS
   35       | A_EXPN . LSB A_EXPN RSB

    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    STAR   shift, and go to state 40
    LSB    shift, and go to state 41
    UPLUS  shift, and go to state 42


State 26

   28 A_EXPN: A_EXPN . PLUS A_EXPN
   29       | A_EXPN . STAR A_EXPN
   30       | LB A_EXPN . RB
   31       | A_EXPN . UPLUS
   35       | A_EXPN . LSB A_EXPN RSB

    RB     shift, and go to state 43
    PLUS   shift, and go to state 39
    STAR   shift, and go to state 40
    LSB    shift, and go to state 41
    UPLUS  shift, and go to state 42


State 27

   28 A_EXPN: A_EXPN . PLUS A_EXPN
   29       | A_EXPN . STAR A_EXPN
   31       | A_EXPN . UPLUS
   34       | STAR A_EXPN .
   35       | A_EXPN . LSB A_EXPN RSB

    LSB  shift, and go to state 41

    LSB       [reduce using rule 34 (A_EXPN)]
    $default  reduce using rule 34 (A_EXPN)


State 28

   28 A_EXPN: A_EXPN . PLUS A_EXPN
   29       | A_EXPN . STAR A_EXPN
   31       | A_EXPN . UPLUS
   35       | A_EXPN . LSB A_EXPN RSB
   36       | AMB A_EXPN .

    LSB  shift, and go to state 41

    LSB       [reduce using rule 36 (A_EXPN)]
    $default  reduce using rule 36 (A_EXPN)


State 29

    3 PROC: MAIN_TYPE MAIN LB RB LCB BODY RCB .

    $default  reduce using rule 3 (PROC)


State 30

    6 STATEMENTS: STATEMENT STATEMENTS .

    $default  reduce using rule 6 (STATEMENTS)


State 31

   24 STAR_SEQ: STAR . STAR_SEQ

    STAR  shift, and go to state 31

    $default  reduce using rule 25 (STAR_SEQ)

    STAR_SEQ  go to state 44


State 32

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE VAR_LIST . SC

    SC  shift, and go to state 45


State 33

   19 VAR_LIST: EXT_VAR . COMA VAR_LIST
   20         | EXT_VAR .

    COMA  shift, and go to state 46

    $default  reduce using rule 20 (VAR_LIST)


State 34

   21 EXT_VAR: STAR_SEQ . VAR_LABEL DIM_SEQ

    VAR_LABEL  shift, and go to state 47


State 35

   16 TYPE_EXTN: SHORT .

    $default  reduce using rule 16 (TYPE_EXTN)


State 36

   17 TYPE_EXTN: LONG .

    $default  reduce using rule 17 (TYPE_EXTN)


State 37

   11 EXT_DATA_TYPE: TYPE_SIGN TYPE_EXTN . TYPE

    INT   shift, and go to state 48
    CHAR  shift, and go to state 49

    TYPE  go to state 50


State 38

   27 PROGRAM_STATEMENT: A_EXPN EQ . A_EXPN SC

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    A_EXPN  go to state 51


State 39

   28 A_EXPN: A_EXPN PLUS . A_EXPN

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    A_EXPN  go to state 52


State 40

   29 A_EXPN: A_EXPN STAR . A_EXPN

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    A_EXPN  go to state 53


State 41

   35 A_EXPN: A_EXPN LSB . A_EXPN RSB

    LB         shift, and go to state 12
    STAR       shift, and go to state 13
    VAR_LABEL  shift, and go to state 14
    AMB        shift, and go to state 16
    NUM        shift, and go to state 17

    A_EXPN  go to state 54


State 42

   31 A_EXPN: A_EXPN UPLUS .

    $default  reduce using rule 31 (A_EXPN)


State 43

   30 A_EXPN: LB A_EXPN RB .

    $default  reduce using rule 30 (A_EXPN)


State 44

   24 STAR_SEQ: STAR STAR_SEQ .

    $default  reduce using rule 24 (STAR_SEQ)


State 45

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE VAR_LIST SC .

    $default  reduce using rule 10 (DECLARATION_STATEMENT)


State 46

   19 VAR_LIST: EXT_VAR COMA . VAR_LIST

    STAR  shift, and go to state 31

    $default  reduce using rule 25 (STAR_SEQ)

    VAR_LIST  go to state 55
    EXT_VAR   go to state 33
    STAR_SEQ  go to state 34


State 47

   21 EXT_VAR: STAR_SEQ VAR_LABEL . DIM_SEQ

    LSB  shift, and go to state 56

    $default  reduce using rule 23 (DIM_SEQ)

    DIM_SEQ  go to state 57
    DIM      go to state 58


State 48

   12 TYPE: INT .

    $default  reduce using rule 12 (TYPE)


State 49

   13 TYPE: CHAR .

    $default  reduce using rule 13 (TYPE)


State 50

   11 EXT_DATA_TYPE: TYPE_SIGN TYPE_EXTN TYPE .

    $default  reduce using rule 11 (EXT_DATA_TYPE)


State 51

   27 PROGRAM_STATEMENT: A_EXPN EQ A_EXPN . SC
   28 A_EXPN: A_EXPN . PLUS A_EXPN
   29       | A_EXPN . STAR A_EXPN
   31       | A_EXPN . UPLUS
   35       | A_EXPN . LSB A_EXPN RSB

    SC     shift, and go to state 59
    PLUS   shift, and go to state 39
    STAR   shift, and go to state 40
    LSB    shift, and go to state 41
    UPLUS  shift, and go to state 42


State 52

   28 A_EXPN: A_EXPN . PLUS A_EXPN
   28       | A_EXPN PLUS A_EXPN .
   29       | A_EXPN . STAR A_EXPN
   31       | A_EXPN . UPLUS
   35       | A_EXPN . LSB A_EXPN RSB

    STAR   shift, and go to state 40
    LSB    shift, and go to state 41
    UPLUS  shift, and go to state 42

    LSB       [reduce using rule 28 (A_EXPN)]
    $default  reduce using rule 28 (A_EXPN)


State 53

   28 A_EXPN: A_EXPN . PLUS A_EXPN
   29       | A_EXPN . STAR A_EXPN
   29       | A_EXPN STAR A_EXPN .
   31       | A_EXPN . UPLUS
   35       | A_EXPN . LSB A_EXPN RSB

    LSB    shift, and go to state 41
    UPLUS  shift, and go to state 42

    LSB       [reduce using rule 29 (A_EXPN)]
    $default  reduce using rule 29 (A_EXPN)


State 54

   28 A_EXPN: A_EXPN . PLUS A_EXPN
   29       | A_EXPN . STAR A_EXPN
   31       | A_EXPN . UPLUS
   35       | A_EXPN . LSB A_EXPN RSB
   35       | A_EXPN LSB A_EXPN . RSB

    PLUS   shift, and go to state 39
    STAR   shift, and go to state 40
    LSB    shift, and go to state 41
    RSB    shift, and go to state 60
    UPLUS  shift, and go to state 42


State 55

   19 VAR_LIST: EXT_VAR COMA VAR_LIST .

    $default  reduce using rule 19 (VAR_LIST)


State 56

   26 DIM: LSB . NUM RSB

    NUM  shift, and go to state 61


State 57

   21 EXT_VAR: STAR_SEQ VAR_LABEL DIM_SEQ .

    $default  reduce using rule 21 (EXT_VAR)


State 58

   22 DIM_SEQ: DIM . DIM_SEQ

    LSB  shift, and go to state 56

    $default  reduce using rule 23 (DIM_SEQ)

    DIM_SEQ  go to state 62
    DIM      go to state 58


State 59

   27 PROGRAM_STATEMENT: A_EXPN EQ A_EXPN SC .

    $default  reduce using rule 27 (PROGRAM_STATEMENT)


State 60

   35 A_EXPN: A_EXPN LSB A_EXPN RSB .

    $default  reduce using rule 35 (A_EXPN)


State 61

   26 DIM: LSB NUM . RSB

    RSB  shift, and go to state 63


State 62

   22 DIM_SEQ: DIM DIM_SEQ .

    $default  reduce using rule 22 (DIM_SEQ)


State 63

   26 DIM: LSB NUM RSB .

    $default  reduce using rule 26 (DIM)
